Fixed game spacing. Still need mouseover functions

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ html {
 .game {
     border: solid gray;
     filter: drop-shadow(5px 5px 4px #adadaf);
-    margin-right: 20px;
+    margin: 0 10px 0 10px;
 }
 
 .icon-hover {
